--- a/escape/application/enjoyusf/view/index/footer.html
+++ b/escape/application/enjoyusf/view/index/footer.html
@@ -12,6 +12,9 @@
 	<script src="/static/enjoyusf/js/easypiechart.js"></script>
 	<script src="/static/enjoyusf/js/easypiechart-data.js"></script>
 	<script src="/static/enjoyusf/js/bootstrap-datepicker.js"></script>
+	<script src="/static/enjoyusf/js/bootstrap-table.js"></script>
+
+
 	<script>
 		$('#calendar').datepicker({
 		});
@@ -29,8 +32,9 @@
 		$(window).on('resize', function () {
 		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
 		})
-	</script>	
+	</script>
 	<script type="text/javascript" src="/static/enjoyusf/js/common.js"></script>
+	<script type="text/javascript" src="/static/enjoyusf/js/layer/layer.js"></script>
 </body>
 
 </html>
