--- a/escape/application/enjoyusf/view/login/login.html
+++ b/escape/application/enjoyusf/view/login/login.html
@@ -14,6 +14,9 @@
 <script src="/static/enjoyusf/js/respond.min.js"></script>
 <![endif]-->
 
+<link rel="stylesheet" href="/static/enjoyusf/js/layer/skin/layer.css">
+
+
 </head>
 
 <body>
@@ -31,7 +34,7 @@ var CONFIG = {
 			<div class="login-panel panel panel-default">
 				<div class="panel-heading">Log in</div>
 				<div class="panel-body">
-					<form role="form" id="my_login_form">
+					<form role="form" id="my_submit_form">
 						<fieldset>
 							<div class="form-group">
 								<input class="form-control" placeholder="E-mail" name="username" type="text" autofocus="">
@@ -44,7 +47,7 @@ var CONFIG = {
 									<input name="remember" type="checkbox" value="Remember Me">Remember Me
 								</label>
 							</div> -->
-							<a href="javascript:void(0)"  class="btn btn-primary" id="my_login_btn">Login</a>
+							<a href="javascript:void(0)"  class="btn btn-primary" id="my_submit_btn">Login</a>
 						</fieldset>
 					</form>
 				</div>
@@ -77,7 +80,7 @@ var CONFIG = {
 		})
 	</script>	
 	<script type="text/javascript" src="/static/enjoyusf/js/common.js"></script>
-
+	<script type="text/javascript" src="/static/enjoyusf/js/layer/layer.js"></script>
 </body>
 
 </html>
