--- a/escape/application/enjoyusf/view/index/header.html
+++ b/escape/application/enjoyusf/view/index/header.html
@@ -16,6 +16,7 @@
 <![endif]-->
 
 <link rel="stylesheet" href="/static/enjoyusf/js/layer/skin/layer.css">
+<script src="/static/enjoyusf/js/jquery-1.11.1.min.js"></script>
 
 
 </head>
