--- a/escape/application/enjoyusf/view/index/header.html
+++ b/escape/application/enjoyusf/view/index/header.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Fight2Escape</title>
 
+<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 <link href="/static/enjoyusf/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/enjoyusf/css/datepicker3.css" rel="stylesheet">
 <link href="/static/enjoyusf/css/styles.css" rel="stylesheet">
