--- a/escape/application/index/view/index/home.html
+++ b/escape/application/index/view/index/home.html
@@ -71,7 +71,7 @@
 						</div>
 					</div>
 				{/volist}
-					<button class="main__list__more">More <b class="ficon">:</b></button>
+					<!-- <button class="main__list__more">More <b class="ficon">:</b></button> -->
 				</section>
 				<footer>
 					<b>&copy;</b>badwolf.cn  powerby fight2escape
