--- a/escape/application/enjoyusf/view/article/index.html
+++ b/escape/application/enjoyusf/view/article/index.html
@@ -38,7 +38,7 @@ var CONFIG  = {
 						    <tr>
 						    	<!-- <td><input type="checkbox"></td> -->
 						    	<td>#{$atc.id}___{$atc.user_id}</td>
-						    	<td><a href="#">{$atc.title}</a></td>
+						    	<td><a href="/enjoyusf/article/edit/id/{$atc.id}">{$atc.title}</a></td>
 						    	<td><img src="{$atc.thumb}" alt="" style="width:50px;height:50px"></td>
 						    	<td>{$atc.create_time|getTime}</td>
 						    	<td>{$atc.update_time|getTime}</td>
