--- a/escape/application/index/view/index/about.html
+++ b/escape/application/index/view/index/about.html
@@ -14,22 +14,23 @@
 		<section class="sidebar">
 			<div class="sidebar__navbar">
 				<a href="/index/index/home" class="navbar__a"><span class="ficon">S</span></a>
-				<a href="#" class="navbar__a"><span class="ficon">3</span></a>
-				<a href="/index/index/about" class="navbar__a active"><span class="ficon">L</span></a>
+				<a href="#" class="navbar__a"><span class="ficon">U</span></a>
+				<a href="/index/index/about" class="navbar__a  active"><span class="ficon">L</span></a>
 			</div>
 			<div class="sidebar__setting">
-				<a href="#" class="setting__a"><span class="ficon">U</span></a>
-				<a href="#" class="setting__a"><span class="ficon">a</span></a>
-				<a href="#" class="setting__a"><span class="ficon">v</span></a>
+				<!-- <a href="#" class="setting__a"><span class="ficon">3</span></a> -->
+				<!-- <a href="#" class="setting__a"><span class="ficon">a</span></a> -->
+				<a href="/index/index/index" class="setting__a"><span class="ficon">v</span></a>
 			</div>
 		</section>
 		<section class="detail">
 	
-			<section class="showpic">
+			<section class="showpic showpic__about">
 				<div class="showpic__summary">
-					<h2>技术</h2>
-					<h3>技术人生，没有道理</h3>
-					<p>技术在手，天下我有,就是这么猖狂</p>
+					<h2>About Me</h2>
+					<h3>以前没得选</h3>
+					<h3>现在我想做个好人</h3>
+					<p></p>
 					<button><b class="ficon">Ã</b>up</button>
 
 				</div>
@@ -42,8 +43,8 @@
 					<div class="showimg"></div>
 					<div class="mask">
 						<div class="info">
-							<h3>a nice day</h3>
-							<p>just do it!just do it!</p>
+							<h3>Fight 2 Escape</h3>
+							<p>Shut Up!Just Do It!</p>
 						</div>
 					</div>
 					<div class="border"></div>
