--- a/escape/application/index/view/index/home.html
+++ b/escape/application/index/view/index/home.html
@@ -6,6 +6,7 @@
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
+	<!-- <link rel="stylesheet" href="/static/handsome/css/mobile.css"> -->
 </head>
 <body>
 	<div class="wrap">
@@ -37,7 +38,7 @@
 			<section class="main">
 				<header>
 				<span><n class="ficon">Æ</n>Coding</span>
-				<input type="text" class="main__search" placeholder="search">
+				<!-- <input type="text" class="main__search" placeholder="search"> -->
 				</header>
 				<!-- <section class="main__tags">
 					<a href="#" class="main__tags__a active">热门</a>
