--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -8,10 +8,14 @@
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/static/handsome/css/index.css">
+	<!-- <link rel="stylesheet" href="/static/handsome/css/mobile.css"> -->
 </head>
 <body>
+<div class="wrap">
+	
+
 	<h1 class="blog__name">ESCAPE</h1>
-	<nav>
+	<nav class="blog__nav">
 		<ul>
 			<!-- <a href="/static/handsome/#"  id="nav1">
 				<li class="mynav"><i class="fa fa-envira"></i></li>home
@@ -30,5 +34,6 @@
 			</a>
 		</ul>
 	</nav>
+</div>
 </body>
 </html>
