--- a/escape/application/index/view/index/about.html
+++ b/escape/application/index/view/index/about.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="/static/handsome/css/article.css">
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
 	<link rel="stylesheet" href="/static/handsome/css/about.css">
+	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
+	
 </head>
 <body>
 	<div class="wrap">
@@ -28,7 +30,7 @@
 			<section class="showpic showpic__about">
 				<div class="showpic__summary">
 					<h2>About Me</h2>
-					<h3>以前没得选</h3>
+					<h3>以前没得选，</h3>
 					<h3>现在我想做个好人</h3>
 					<p></p>
 					<button><b class="ficon">Ã</b>up</button>
@@ -53,7 +55,7 @@
 					{$res.content}
 				</article>
 				<footer>
-					<b>&copy;</b>badwolf.cn  powerby fight2escape
+					<b>&copy;</b>badwolfs.cn  powerby myself
 				</footer>
 			</section>
 
