--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
 	<link rel="stylesheet" href="/static/handsome/css/article.css">
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
+	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
+	
 </head>
 <body>
 	<div class="wrap">
@@ -26,9 +28,10 @@
 	
 			<section class="showpic showpic__article">
 				<div class="showpic__summary">
-					<h2>技术</h2>
-					<h3>技术人生，没有道理</h3>
-					<p>技术在手，天下我有,就是这么猖狂</p>
+					<h2>Share</h2>
+					<h3>出来混，总是要还的</h3>
+					<p>哦不，分享是互联网最崇高的精神
+					</p>
 					<button><b class="ficon">Ã</b>up</button>
 
 				</div>
@@ -43,7 +46,7 @@
 				</article>
 				<button class="main__list__more main__list__others" id="my_back_btn">Others <b class="ficon">Ì</b></button>
 				<footer>
-					<b>&copy;</b>badwolf.cn  powerby fight2escape
+					<b>&copy;</b>badwolfs.cn  powerby myself
 				</footer>
 			</section>
 
