--- a/escape/application/index/view/index/home.html
+++ b/escape/application/index/view/index/home.html
@@ -6,7 +6,7 @@
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
-	<!-- <link rel="stylesheet" href="/static/handsome/css/mobile.css"> -->
+	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
 </head>
 <body>
 	<div class="wrap">
@@ -26,9 +26,9 @@
 	
 			<section class="showpic showpic__home">
 				<div class="showpic__summary">
-					<h2>技术</h2>
-					<h3>技术人生，没有道理</h3>
-					<p>技术在手，天下我有,就是这么猖狂</p>
+					<h2>Article</h2>
+					<h3>// 深度模仿</h3>
+					<p>快速成长为你想要的那个自己</p>
 					<button><b class="ficon">Ã</b>up</button>
 
 				</div>
@@ -68,14 +68,14 @@
 							</p>
 						</div>
 						<div class="list__one__right">
-							<a href="#"><img src="{$atc.thumb}" alt=""></a>
+							<a href="/index/index/article/get/{$atc.id}"><img src="{$atc.thumb}" alt=""></a>
 						</div>
 					</div>
 				{/volist}
 					<!-- <button class="main__list__more">More <b class="ficon">:</b></button> -->
 				</section>
 				<footer>
-					<b>&copy;</b>badwolf.cn  powerby fight2escape
+					<b>&copy;</b>badwolfs.cn  powerby myself
 				</footer>
 			</section>
 
