--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -8,7 +8,7 @@
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/static/handsome/css/index.css">
-	<!-- <link rel="stylesheet" href="/static/handsome/css/mobile.css"> -->
+	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
 </head>
 <body>
 <div class="wrap">
