just small  bug

--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -40,7 +40,7 @@
 			
 			<section class="main">
 				<h1><b class="ficon">È</b>	{$res.title}</h1>
-				<span><b class="ficon">4</b>	{$res.update_time|getTime}</span>
+				<span class="span__title"><b class="ficon">4</b>	{$res.update_time|getTime}</span>
 				<article>
 					{$res.content}
 				</article>
