--- a/escape/application/index/view/index/home.html
+++ b/escape/application/index/view/index/home.html
@@ -60,6 +60,7 @@
 						<div class="list__one__left">
 							
 							<h3><a href="/index/index/article/get/{$atc.id}"><b class="ficon">\</b>{$atc.title}</a></h3>
+							<p>{$atc.summary}</p>
 							<p><b class="ficon">4</b>{$atc.update_time|getTimeSimple}</p>
 							<p>
 							<!-- <a href="#">热门</a>
