--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
 	<link rel="stylesheet" href="/static/handsome/css/article.css">
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
+	<link rel="stylesheet" href="/static/handsome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
 	
 </head>
@@ -44,7 +45,7 @@
 				<article>
 					{$res.content}
 				</article>
-				<button class="main__list__more main__list__others" id="my_back_btn">Others <b class="ficon">Ì</b></button>
+				<button class="main__list__more main__list__others" id="my_back_btn">Others <i class="fa fa-book"></i></button>
 				<footer>
 					<b>&copy;</b>badwolfs.cn  powerby myself
 				</footer>
@@ -56,4 +57,4 @@
 
 	<script src="/static/handsome/js/common.js"></script>
 </body>
-</html>	
+</html>
