--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -21,13 +21,13 @@
 				<li class="mynav"><i class="fa fa-envira"></i></li>home
 			</a> -->
 			<a href="#"  id="nav2">
-				<li class="mynav"><i class="fa fa-google"></i></li>Email
+				<li class="mynav"><i class="fa fa-envelope"></i></li>Email
 			</a>
 			<a href="#"  id="nav3">
 				<li class="mynav"><i class="fa fa-github"></i></li>Github
 			</a>
 			<a href="/index/index/about"  id="nav4">
-				<li class="mynav"><i class="fa fa-at"></i></li>About
+				<li class="mynav"><i class="fa fa-bolt"></i></li>About
 			</a>
 			<a href="/index/index/home"  id="nav5">
 				<li class="mynav"><i class="fa fa-beer"></i></li>Blog
