--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
 </head>
 <body>
-<div class="wrap">
+<div class="wrap_bg">
 	
 
 	<h1 class="blog__name">ESCAPE</h1>
