--- a/escape/application/index/view/index/about.html
+++ b/escape/application/index/view/index/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width" initial-scale="1"/>
 	<title>Fight2Escape-About</title>
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
@@ -46,7 +48,7 @@
 					<div class="mask">
 						<div class="info">
 							<h3>Fight 2 Escape</h3>
-							<p>Shut Up!Just Do It!</p>
+							<p>Shut Up! Just Do It!</p>
 						</div>
 					</div>
 					<div class="border"></div>
