--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width" initial-scale="1"/>
 	<title>Fight2Escape-Article</title>
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
@@ -45,7 +47,7 @@
 				<article>
 					{$res.content}
 				</article>
-				<button class="main__list__more main__list__others" id="my_back_btn">Others <i class="fa fa-book"></i></button>
+				<button class="main__list__others" id="my_back_btn">Others <i class="fa fa-book"></i></button>
 				<footer>
 					<b>&copy;</b>badwolfs.cn  powerby myself
 				</footer>
