--- a/escape/application/index/view/index/home.html
+++ b/escape/application/index/view/index/home.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width" initial-scale="1"/>
 	<title>Fight2Escape-Blog</title>
 	<link href="/static/handsome/img/f2e.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="/static/handsome/css/home.css">
@@ -51,7 +53,7 @@
 							
 							<h3><a href="/index/index/article/get/{$atc.id}"><b class="ficon">\</b>{$atc.title}</a></h3>
 							<p>{$atc.summary}</p>
-							<p><b class="ficon">4</b>{$atc.update_time|getTimeSimple}</p>
+							<p class="list__one__left__time"><b class="ficon">4</b>{$atc.update_time|getTimeSimple}</p>
 							<p>
 							<!-- <a href="#">热门</a>
 							<a href="#">热门</a>
