--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -20,7 +20,7 @@
 			<!-- <a href="/static/handsome/#"  id="nav1">
 				<li class="mynav"><i class="fa fa-envira"></i></li>home
 			</a> -->
-			<a href="#"  id="nav2">
+			<a href="mailto:fight2escape@gmail.com"  id="nav2">
 				<li class="mynav"><i class="fa fa-envelope"></i></li>Email
 			</a>
 			<a href="#"  id="nav3">
