--- a/escape/application/index/view/index/index.html
+++ b/escape/application/index/view/index/index.html
@@ -35,6 +35,10 @@
 		</ul>
 	</nav>
 </div>
+<div style="position:absolute;right:0;bottom:0;">
+	<a href="http://webscan.360.cn/index/checkwebsite/url/blog.badwolfs.cn"><img border="0" src="http://img.webscan.360.cn/status/pai/hash/95dc43e1820c93b1387b031efafa6d41"/></a>
+</div>
+
 	<script src="/static/handsome/js/common.js"></script>
 
 </body>
