--- a/escape/application/enjoyusf/view/article/index.html
+++ b/escape/application/enjoyusf/view/article/index.html
@@ -1,7 +1,8 @@
 
 <script>
 var CONFIG  = {
-	'jump_url'	:'/enjoyusf/article/add',
+	'jump_url'		:'/enjoyusf/article/add',
+	'jump_url_md'	:'/enjoyusf/article/addMd',
 }
 </script>
 
@@ -21,7 +22,10 @@ var CONFIG  = {
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading"><button class="btn btn-primary" id="my_jump_btn">New Article</button></div>
+					<div class="panel-heading">
+					<button class="btn btn-default" id="my_jump_btn">New Article</button>
+					<button class="btn btn-primary" id="my_jump_btn_md">New MarkDown</button>
+					</div>
 					<div class="panel-body">
 						<table data-toggle="table" data-show-refresh="true" data-show-toggle="true" data-show-columns="true" data-search="true" data-select-item-name="toolbar1" data-pagination="true" data-sort-name="name" data-sort-order="desc">
 						    <thead>
