--- a/escape/application/enjoyusf/view/article/addMd.html
+++ b/escape/application/enjoyusf/view/article/addMd.html
@@ -3,7 +3,7 @@
 
 <script>
 var CONFIG = {
-	'submit_url'	:'/enjoyusf/article/add',
+	'submit_url'	:'/enjoyusf/article/addMd',
 	'jump_url'		:'/enjoyusf/article/index',
 }
 </script>
@@ -60,8 +60,8 @@ var CONFIG = {
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Content</label>
-                                <div id="editormd"  style="width:90%;height:690px">
-                                    <textarea style="display:none;">### Hello Editor.md !</textarea>
+                                <div id="editormd" >
+                                    <textarea style="display:none;" >### Hello Editor.md !</textarea>
                                 </div>
                             </div>
 	                        <button type="button" class="btn btn-primary" id="my_submit_btn">Submit</button>
@@ -78,7 +78,8 @@ var CONFIG = {
         <script type="text/javascript">
             $(function() {
                 var editor = editormd("editormd", {
-                    path : "/static/editor-md/lib/" // Autoload modules mode, codemirror, marked... dependents libs path
+                    path : "/static/editor-md/lib/", // Autoload modules mode, codemirror, marked... dependents libs path
+                    saveHTMLToTextarea : true
                 });
             });
         </script>
