--- a/escape/application/enjoyusf/view/article/editmd.html
+++ b/escape/application/enjoyusf/view/article/editmd.html
@@ -1,8 +1,9 @@
 
+<link rel="stylesheet" href="/static/editor-md/css/editormd.min.css">
 
 <script>
 var CONFIG = {
-	'submit_url'	:'/enjoyusf/article/edit',
+	'submit_url'	:'/enjoyusf/article/editMd',
 	'jump_url'		:'/enjoyusf/article/index',
 }
 </script>
@@ -11,13 +12,13 @@ var CONFIG = {
     <div class="row">
         <ol class="breadcrumb">
             <li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-            <li class="active">edit Article</li>
+            <li class="active">Edit MarkDown</li>
         </ol>
     </div>
     <!--/.row-->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">edit Article</h1>
+            <h1 class="page-header">Edit MarkDown</h1>
         </div>
     </div>
     <!--/.row-->
@@ -27,15 +28,15 @@ var CONFIG = {
                 <!-- <div class="panel-heading">Form Elements</div> -->
                 <div class="panel-body" style="margin-bottom:200px">
                     <form role="form" id="my_submit_form">
-                        <div class="col-md-7">
                         <input type="hidden" name="id" value="{$res.id}">
+                        <div class="col-md-7">
                             <div class="form-group">
                                 <label>Title</label>
                                 <input class="form-control" placeholder="套路，是我和你走过最长的路" name="title" id="title" value="{$res.title}">
                             </div>
                             <div class="form-group">
                                 <label>Summary</label>
-                                <textarea class="form-control" rows="10"  name="summary" value="">{$res.summary}</textarea>
+                                <textarea class="form-control" rows="1" placeholder="类似文章的引子" name="summary">{$res.summary}</textarea>
                             </div>
                         </div>
                         <div class="col-md-5">
@@ -43,14 +44,26 @@ var CONFIG = {
                                 <label>Thumb</label>
                                 <input type="file" name="thumb" id="img_select" multiple="true">
                                 <p class="help-block" id="output">挑张漂亮的做封面</p>
-                                <img style="display: block" id="show_img" src="{$res.thumb}" width="250px" height="250px">
+                                <img style="" id="show_img" src="{$res.thumb}" width="250px" height="250px">
 								<input id="upload_image" name="thumb" type="hidden" multiple="true" value="{$res.thumb}">
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="form-group">
+                                <label>上传文章所需图片</label>
+                                <input type="file" name="thumb_md" id="img_select_md" multiple="true">
+                                <p class="help-block" id="output_md" style="color:blue;font-weight:900">传一张呗</p>
+                                <img style="display: none" id="show_img_md" src="" width="100px" height="100px">
+                                <input id="upload_image_md"  type="text" multiple="true" value="">
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-12">
+                            <div class="form-group">
                                 <label>Content</label>
-                                <textarea class="form-control js-editor" rows="20" id="editor_escape" name="content" value="">{$res.content}</textarea>
+                                <div id="editormd" >
+                                    <textarea style="display:none;" >{$res.md_content}</textarea>
+                                </div>
                             </div>
 	                        <button type="button" class="btn btn-primary" id="my_submit_btn">Submit</button>
 	                        <!-- <button type="reset" class="btn btn-default">Reset Button</button> -->
@@ -60,6 +73,17 @@ var CONFIG = {
             </div>
         </div>
         <!-- /.col-->
+
+
+        <script src="/static/editor-md/editormd.min.js"></script>
+        <script type="text/javascript">
+            $(function() {
+                var editor = editormd("editormd", {
+                    path : "/static/editor-md/lib/", // Autoload modules mode, codemirror, marked... dependents libs path
+                    saveHTMLToTextarea : true
+                });
+            });
+        </script>
 
         <script src="/static/kindeditor/kindeditor-all-min.js"></script>
         <script>
