--- a/escape/application/index/view/index/about.html
+++ b/escape/application/index/view/index/about.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="/static/handsome/css/about.css">
 	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
 	
+	<link rel="stylesheet" href="/static/editor-md/css/editormd.css" />
+	<script src="/static/enjoyusf/js/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -54,7 +56,9 @@
 					<div class="border"></div>
 				</a>
 				<article class="about__article">
-					{$res.content}
+					<div id="wordsView">
+					     <textarea style="" name="editormd-markdown-doc">{$res.md_content}</textarea>
+					</div>
 				</article>
 				<footer>
 					<b>&copy;</b>badwolfs.cn  powerby myself
@@ -64,6 +68,31 @@
 		</section>
 	</div>
 	<script src="/static/handsome/js/common.js"></script>
+	
+	<script src="/static/editor-md/lib/marked.min.js"></script>
+	<script src="/static/editor-md/lib/prettify.min.js"></script>
+	<script src="/static/editor-md/lib/raphael.min.js"></script>
+	<script src="/static/editor-md/lib/underscore.min.js"></script>
+	<script src="/static/editor-md/lib/sequence-diagram.min.js"></script>
+	<script src="/static/editor-md/lib/flowchart.min.js"></script>
+	<script src="/static/editor-md/lib/jquery.flowchart.min.js"></script>
+	<script src="/static/editor-md/editormd.js"></script>
+	<script type="text/javascript">
+	    $(document).ready(function() {
+	        var wordsView;
+	        wordsView = editormd.markdownToHTML("wordsView", {
+	            htmlDecode      : "style,script,iframe",  // you can filter tags decode
+	            emoji           : true,
+	            taskList        : true,
+	            tex             : true,  // 默认不解析
+	            flowChart       : true,  // 默认不解析
+	            sequenceDiagram : true,  // 默认不解析
+	        });
+
+	    })
+	</script>
+
+
 	
 </body>
 </html>	
