--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/static/handsome/css/raphaelicons.css">
 	<link rel="stylesheet" href="/static/handsome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/static/handsome/css/mobile.css">
+
+	<link rel="stylesheet" href="/static/editor-md/css/editormd.css" />
+	<script src="/static/enjoyusf/js/jquery-1.11.1.min.js"></script>
 	
 </head>
 <body>
@@ -45,7 +48,11 @@
 				<h1><b class="ficon">È</b>	{$res.title}</h1>
 				<span class="span__title"><b class="ficon">4</b>	{$res.update_time|getTime}</span>
 				<article>
-					{$res.content}
+
+					<div id="wordsView">
+					     <textarea style="" name="editormd-markdown-doc">{$res.md_content}</textarea>
+					</div>
+					
 				</article>
 				<button class="main__list__others" id="my_back_btn">Others <i class="fa fa-book"></i></button>
 				<footer>
@@ -58,5 +65,33 @@
 
 
 	<script src="/static/handsome/js/common.js"></script>
+
+
+
+	<script src="/static/editor-md/lib/marked.min.js"></script>
+	<script src="/static/editor-md/lib/prettify.min.js"></script>
+	<script src="/static/editor-md/lib/raphael.min.js"></script>
+	<script src="/static/editor-md/lib/underscore.min.js"></script>
+	<script src="/static/editor-md/lib/sequence-diagram.min.js"></script>
+	<script src="/static/editor-md/lib/flowchart.min.js"></script>
+	<script src="/static/editor-md/lib/jquery.flowchart.min.js"></script>
+	<script src="/static/editor-md/editormd.js"></script>
+	<script type="text/javascript">
+	    $(document).ready(function() {
+	        var wordsView;
+	        wordsView = editormd.markdownToHTML("wordsView", {
+	            htmlDecode      : "style,script,iframe",  // you can filter tags decode
+	            emoji           : true,
+	            taskList        : true,
+	            tex             : true,  // 默认不解析
+	            flowChart       : true,  // 默认不解析
+	            sequenceDiagram : true,  // 默认不解析
+	        });
+
+	    })
+	</script>
+
+
+
 </body>
 </html>
