escape v1.1.2 优化版权排版

--- a/escape/application/index/view/index/article.html
+++ b/escape/application/index/view/index/article.html
@@ -50,7 +50,7 @@
 				<article>
 
 					<div id="wordsView">
-					     <textarea style="" name="editormd-markdown-doc">{$res.md_content}</textarea>
+					     <textarea style="" name="editormd-markdown-doc">{$res.content}</textarea>
 					</div>
 					
 				</article>
