--- a/escape/application/enjoyusf/view/article/addMd.html
+++ b/escape/application/enjoyusf/view/article/addMd.html
@@ -60,8 +60,8 @@ var CONFIG = {
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Content</label>
-                                <div id="editormd" >
-                                    <textarea style="display:none;" >### Hello Editor.md !</textarea>
+                                <div id="editormd" style="z-index:10000">
+                                    <textarea style="display:none;" ></textarea>
                                 </div>
                             </div>
 	                        <button type="button" class="btn btn-primary" id="my_submit_btn">Submit</button>
@@ -79,6 +79,8 @@ var CONFIG = {
             $(function() {
                 var editor = editormd("editormd", {
                     path : "/static/editor-md/lib/", // Autoload modules mode, codemirror, marked... dependents libs path
+                    width : '100%',
+                    height : '500px',
                     saveHTMLToTextarea : true
                 });
             });
